...
    <TouchableOpacity
      onPress={handleToggle}
      accessibilityRole="checkbox"
      accessibilityState={{ checked: isChecked }}
      accessibilityLabel={
        isTermoDeUso
          ? 'Li e aceito os Termos de Uso'
          : 'Declaro ser o responsável por este local'
      }
      accessibilityHint={
        isTermoDeUso
          ? 'Clique aqui para aceitar os Termos de Uso'
          : 'Clique aqui para declarar que é o responsável por este local'
...
