...
                onChangeText={profession => setProfession(profession)}
                errorMessage={errors.profession} />
            </View>

            <View style={styles.buttonContainer}>
              <ButtonComponent
                text='Próximo'
                onPress={handleUpdate}
                isBlue={true}
                accessibilityLabel='Próximo' />
            </View>
          </View>
        </KeyboardAvoidingView>
...
