...
                onPress={() => console.log('Esqueci senha')}>
                <Text style={styles.textButton}>Esqueceu sua senha?</Text>
              </TouchableOpacity>

              <TouchableOpacity
                style={styles.textButtonContainer}
                accessibilityLabel='Cadastrar-se'
                onPress={() => navigation.navigate('SignUpBasicInfoScreen')}>
                <Text style={styles.textButton}>Ainda não tem conta? Cadastre-se!</Text>
              </TouchableOpacity>
            </View>
          </View>
        </ScrollView >
...
