appId: com.pchong.SemBarreiras
---
- launchApp:
    clearState: true
    label: "Inicializa o aplicativo Sem Barreiras"
- tapOn:
    text: "Cadastrar-se"
    label: "Clica no botão cadastrar-se"
- assertVisible:
    text: "Boas-Vindas!"
    label: "Verifica a presença da expressão 'Boas-Vindas!'"
- tapOn:
   text: "Caixa de edição texto Nome* detectado"
   label: "Clica no campo de nome"
- inputRandomPersonName:
    label: "Insere um nome aleatório"
- tapOn:
    text: "Caixa de edição texto E-mail* detectado"
    label: "Clica no campo de e-mail"
- inputRandomEmail:
    label: "Insere um email aleatório"
- tapOn:
    text: "Caixa de edição texto Data de Nascimento* detectado"
    label: "Clica no campo de Data de Nascimento"
- inputText:
    text: "22/11/2001"
    label: "Digita uma data de nascimento aleatória"
- tapOn:
    text: "Caixa de edição texto Celular* detectado"
    label: "Clica no campo de celular"
- inputText:
    text: "51992754630"
    label: "Digita um número aleatório"
- scroll:
    label: "Scrolla para achar outros campos"
- tapOn:
    text: "Caixa de edição texto Senha* detectado"
    label: "Clica no campo de senha"
- inputText:
    text: "senha123 \n"
    label: "Digita uma senha"
- tapOn:
    text: "Caixa de edição texto Confirme a Senha* detectado"
    label: "Clica no campo de confirmar senha"
- inputText:
    text: "senha123 \n"
    label: "Confirma a senha"
- tapOn:
    text: "Próximo"
    label: "Clica no botão próximo"
- assertNotVisible:
    text: "Selecione as categorias que você se enquadra"
    label: "Verifica que o texto da segunda aba do cadastro NAO está visível"
